force-app/main/default/objects/Convsta_Mission__c/Convsta_Mission__c.object-meta.xml
<CustomObject>
    <description>Informations relatives à la mission que l&apos;étudiant effectuera en entreprise - A saisir pour sa demande d&apos;expérience professionnelle.</description>
    <label>Mission</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Convsta Mission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>