force-app/main/default/objects/Convsta_Mission__c/fields/Afficher_le_detail_dans_la_convention__c.field-meta.xml
<CustomField>
    <fullName>Afficher_le_detail_dans_la_convention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afficher le détail dans la convention</label>
    <type>Checkbox</type>
</CustomField>