force-app/main/default/objects/Convsta_Mission__c/fields/Civilite_Tuteur_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Civilite_Tuteur_Entreprise__c</fullName>
    <description>Le titre de civilité de l&apos;employé de l’entreprise en charge de l’étudiant pendant son expérience professionnelle.</description>
    <label>Civilité du Tuteur Entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>Mme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>