force-app/main/default/objects/Convsta_Mission__c/fields/Competences_a_acquerir_2__c.field-meta.xml
<CustomField>
    <fullName>Competences_a_acquerir_2__c</fullName>
    <label>Compétences Early makers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interagir dans un contexte interculturel</fullName>
            </value>
            <value>
                <fullName>Prendre des initiatives</fullName>
            </value>
            <value>
                <fullName>Prendre des risques</fullName>
            </value>
            <value>
                <fullName>Se remettre en cause</fullName>
            </value>
            <value>
                <fullName>Collaborer, à co-construire</fullName>
            </value>
            <value>
                <fullName>Établir, développer, mobiliser des réseaux</fullName>
            </value>
            <value>
                <fullName>Valoriser ses réalisations, faire connaître</fullName>
            </value>
            <value>
                <fullName>Avoir un comportement éthique et responsable</fullName>
            </value>
            <value>
                <fullName>Anticiper les transformations et ruptures</fullName>
            </value>
            <value>
                <fullName>Capitaliser, à apprendre de ses expériences</fullName>
            </value>
            <value>
                <fullName>Construire un regard critique</fullName>
            </value>
            <value>
                <fullName>Formuler et mettre en œuvre des solutions innovantes</fullName>
            </value>
            <value>
                <fullName>Faire preuve de résilience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>