force-app/main/default/objects/Convsta_Mission__c/fields/Competences_categorie_2__c.field-meta.xml
<CustomField>
    <fullName>Competences_categorie_2__c</fullName>
    <label>Compétences comportementales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Démontrer un comportement assertif</fullName>
            </value>
            <value>
                <fullName>Gérer son stress</fullName>
            </value>
            <value>
                <fullName>Élaborer un diagnostic</fullName>
            </value>
            <value>
                <fullName>Conceptualiser, et modéliser les situations complexes</fullName>
            </value>
            <value>
                <fullName>Mobiliser différentes sources pour accéder à l&apos;information</fullName>
            </value>
            <value>
                <fullName>Qualifier l&apos;information et identifier l&apos;information pertinente</fullName>
            </value>
            <value>
                <fullName>Organiser son travail avec précision et rigueur</fullName>
            </value>
            <value>
                <fullName>Gérer son temps et les priorités</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>