force-app/main/default/objects/Convsta_Mission__c/fields/Conceptualiser_et_modeliser__c.field-meta.xml
<CustomField>
    <fullName>Conceptualiser_et_modeliser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Conceptualiser, et modéliser les situations complexes</inlineHelpText>
    <label>Conceptualiser et modéliser</label>
    <type>Checkbox</type>
</CustomField>