force-app/main/default/objects/Convsta_Mission__c/fields/Convsta_Autre_competence__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Autre_competence__c</fullName>
    <inlineHelpText>Par exemple: Gestion de Projets, codage Python, Photoshop, etc</inlineHelpText>
    <label>Autres compétences métier</label>
    <type>TextArea</type>
</CustomField>