force-app/main/default/objects/Convsta_Mission__c/fields/Convsta_Description_de_la_mission__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Description_de_la_mission__c</fullName>
    <label>Description de la mission</label>
    <length>360</length>
    <type>LongTextArea</type>
</CustomField>