force-app/main/default/objects/Convsta_Mission__c/fields/Demontrer_un_comportement_assertif__c.field-meta.xml
<CustomField>
    <fullName>Demontrer_un_comportement_assertif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Démontrer un comportement assertif</label>
    <type>Checkbox</type>
</CustomField>