force-app/main/default/objects/Convsta_Mission__c/fields/Elaborer_un_diagnostic__c.field-meta.xml
<CustomField>
    <fullName>Elaborer_un_diagnostic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Élaborer un diagnostic</label>
    <type>Checkbox</type>
</CustomField>