force-app/main/default/objects/Convsta_Mission__c/fields/Email_Tuteur_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Email_Tuteur_Entreprise__c</fullName>
    <description>L&apos;adresse email de l&apos;employé de l’entreprise en charge de l’étudiant pendant son expérience professionnelle.</description>
    <inlineHelpText>Conseil : Demandez qui va recevoir et signer la convention. ex: le responsable légal peut être le Directeur Général mais c&apos;est dans les faits son assistante qui signera la convention.C&apos;est donc effectivement le mail de l&apos;assistante qu&apos;il faudra renseigner</inlineHelpText>
    <label>Email du Tuteur Entreprise</label>
    <type>Email</type>
</CustomField>