force-app/main/default/objects/Convsta_Mission__c/fields/Gerer_son_stress__c.field-meta.xml
<CustomField>
    <fullName>Gerer_son_stress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gérer son stress</label>
    <type>Checkbox</type>
</CustomField>