force-app/main/default/objects/Convsta_Mission__c/fields/Gerer_son_temps_et_les_priorites__c.field-meta.xml
<CustomField>
    <fullName>Gerer_son_temps_et_les_priorites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gérer son temps et les priorités</label>
    <type>Checkbox</type>
</CustomField>