force-app/main/default/objects/Convsta_Mission__c/fields/Mobiliser_differentes_sources__c.field-meta.xml
<CustomField>
    <fullName>Mobiliser_differentes_sources__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mobiliser différentes sources pour accéder à l&apos;information.</inlineHelpText>
    <label>Mobiliser différentes sources</label>
    <type>Checkbox</type>
</CustomField>