force-app/main/default/objects/Convsta_Mission__c/fields/Nom_de_famille_de_l_etudiant__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_famille_de_l_etudiant__c</fullName>
    <formula>MD_Demande__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom de famille de l&apos;étudiant</label>
    <type>Text</type>
</CustomField>