force-app/main/default/objects/Convsta_Mission__c/fields/Nom_Tuteur_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Nom_Tuteur_Entreprise__c</fullName>
    <description>Le nom de l&apos;employé de l’entreprise en charge de l’étudiant pendant son expérience professionnelle.</description>
    <inlineHelpText>Conseil: Attention à l&apos;orthographe</inlineHelpText>
    <label>Nom du Tuteur Entreprise</label>
    <length>80</length>
    <type>Text</type>
</CustomField>