force-app/main/default/objects/Convsta_Mission__c/fields/Precision_et_rigueur_au_travail__c.field-meta.xml
<CustomField>
    <fullName>Precision_et_rigueur_au_travail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Organiser son travail avec précision et rigueur.</inlineHelpText>
    <label>Précision et rigueur au travail</label>
    <type>Checkbox</type>
</CustomField>