force-app/main/default/objects/Convsta_Mission__c/fields/Prenom_tudiant__c.field-meta.xml
<CustomField>
    <fullName>Prenom_tudiant__c</fullName>
    <formula>MD_Demande__r.Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prénom étudiant</label>
    <type>Text</type>
</CustomField>