force-app/main/default/objects/Convsta_Mission__c/fields/Qualifier_et_identifier_l_information__c.field-meta.xml
<CustomField>
    <fullName>Qualifier_et_identifier_l_information__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Qualifier l&apos;information et identifier l&apos;information pertinente</inlineHelpText>
    <label>Qualifier et identifier l&apos;information</label>
    <type>Checkbox</type>
</CustomField>