force-app/main/default/objects/Convsta_Mission__c/fields/Telephone_Tuteur_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Tuteur_Entreprise__c</fullName>
    <description>Le numéro de téléphone de la personne qui encadre l&apos;étudiant dans l&apos;entreprise</description>
    <inlineHelpText>Le numéro de téléphone de l&apos;employé de l’entreprise en charge de l’étudiant pendant son expérience professionnelle.</inlineHelpText>
    <label>Téléphone du Tuteur Entreprise</label>
    <type>Phone</type>
</CustomField>