force-app/main/default/objects/Convsta_Mission__c/fields/Titre_Mission__c.field-meta.xml
<CustomField>
    <fullName>Titre_Mission__c</fullName>
    <description>Le titre de la mission de l&apos;étudiant dans l&apos;entreprise</description>
    <inlineHelpText>Titre de la mission de l&apos;étudiant dans l&apos;entreprise (maximum 70 caractères)</inlineHelpText>
    <label>Titre de la Mission</label>
    <length>70</length>
    <type>Text</type>
</CustomField>