force-app/main/default/objects/Convsta_Mission__c/fields/Tuteur_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Tuteur_Entreprise__c</fullName>
    <description>La fonction de l&apos;employé de l’entreprise en charge de l’étudiant pendant son expérience professionnelle.</description>
    <inlineHelpText>Conseil : Faites vous préciser le titre exacte par un collaborateur de l&apos;équipe RH de l&apos;entreprise.</inlineHelpText>
    <label>Fonction du Tuteur Entreprise</label>
    <length>80</length>
    <type>Text</type>
</CustomField>