force-app/main/default/objects/Convsta_Mission__c/validationRules/Limitation_nombre_de_caracteres.validationRule-meta.xml
<ValidationRule>
    <fullName>Limitation_nombre_de_caracteres</fullName>
    <active>false</active>
    <description>4 lignes maximum</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
LEN( Convsta_Description_de_la_mission__c )  &gt;= 360</errorConditionFormula>
    <errorDisplayField>Convsta_Description_de_la_mission__c</errorDisplayField>
    <errorMessage>Votre description est trop longue.</errorMessage>
</ValidationRule>